--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "material-design-icons-iconfont": "^6.7.0",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
